# F1RaceDelta

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0bdd08c2f252_update_degradation_schema_for_phase_4_.py  771003bf8804_add_idempotent_unique_constraints_and_.py  8eadadf836d0_initial_schema.py
backend/src/api/: logger.py  main.py
backend/src/api/routes/: catalog.py  health.py  simulation.py  telemetry.py
backend/src/calibration/: optimizer.py  truth_extractor.py
backend/src/core/: config.py
backend/src/db/: session.py
backend/src/db/models/: __init__.py  degradation.py  driver.py  lap.py  micro_sector.py  race.py  stint.py
backend/src/domain/: calibration.py  monte_carlo.py  physics.py  preprocessor.py
backend/src/ingestion/: db_sync.py  exporter.py  fastf1_fetcher.py  telemetry_normalizer.py
backend/src/scripts/: backfill_race_metadata.py  calibrate_season.py  ingest_race.py  ingest_season.py  set_r2_cors.py
backend/src/storage/: r2_client.py
backend/tests/domain/: test_physics.py
docs/: ARCHITECTURE.md  TECHNICAL_DOC.md
docs/planning/: 01_project_setup_and_db.md  02_data_ingestion.md  03_domain_and_simulation.md  04_monte_carlo_and_ml.md  05_api_layer.md  06_frontend_and_deployment.md  README.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/monte-carlo/: page.tsx
frontend/src/hooks/: useTelemetryWorker.ts
frontend/src/store/: uiStore.ts
(+8 files in other folders)
