[project]
name = "f1racedelta"
version = "0.1.0"
description = "F1RaceDelta Backend"
authors = [
    {name = "Arbaaz Laskar"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "fastf1 (>=3.8.1,<4.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "fastapi (>=0.129.2,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "boto3 (<1.40.62)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "gunicorn (>=25.1.0,<26.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.2,<0.16.0"
mypy = ">=1.19.1,<2.0.0"
pytest = ">=9.0.2,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
